--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.2.3",
     "next": "14.1.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
