--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.8",
+    "@apollo/server": "^4.10.1",
+    "@as-integrations/next": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
+    "graphql-tag": "^2.12.6",
     "jose": "^5.2.3",
     "next": "14.1.3",
     "next-redux-wrapper": "^8.1.0",
