--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.8",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@apollo/server": "^4.10.1",
     "@as-integrations/next": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.1",
