--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "graphql-tag": "^2.12.6",
     "jose": "^5.2.3",
+    "mongoose": "^8.2.2",
     "next": "14.1.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
