--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "sass": "^1.72.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
