--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "sass": "^1.72.0",
+    "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -33,7 +34,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
